--- a/client/project/src/index.html
+++ b/client/project/src/index.html
@@ -15,5 +15,8 @@
   </head>
   <body>
     <app-root></app-root>
+    <!-- <div class="bg"></div>
+    <div class="bg bg2"></div>
+    <div class="bg bg3"></div> -->
   </body>
 </html>
