expense tracker component

--- a/client/project/src/index.html
+++ b/client/project/src/index.html
@@ -12,6 +12,7 @@
       type="text/css"
       href="lara-dark-teal.css"
     />
+    <script src="./assets/chartjs-plugin-doughnutlabel.js"></script>
   </head>
   <body>
     <app-root></app-root>
