stock donut chart and tree table

--- a/client/project/src/index.html
+++ b/client/project/src/index.html
@@ -10,7 +10,7 @@
       id="app-theme"
       rel="stylesheet"
       type="text/css"
-      href="lara-dark-teal.css"
+      href="arya-green.css"
     />
   </head>
   <body>
