--- a/client/project/src/index.html
+++ b/client/project/src/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <app-root></app-root>
+    <app-root class="app-root"></app-root>
     <!-- <div class="bg"></div>
     <div class="bg bg2"></div>
     <div class="bg bg3"></div> -->
