--- a/client/project/src/index.html
+++ b/client/project/src/index.html
@@ -6,12 +6,7 @@
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link
-      id="app-theme"
-      rel="stylesheet"
-      type="text/css"
-      href="viva-dark.css"
-    />
+    <link id="app-theme" rel="stylesheet" type="text/css" href="mira.css" />
   </head>
   <body>
     <app-root class="app-root"></app-root>
