integrate payment gateway paypal

--- a/client/project/src/index.html
+++ b/client/project/src/index.html
@@ -8,6 +8,7 @@
     <!-- <link rel="icon" type="image/x-icon" href="favicon.ico" /> -->
     <link rel="icon" type="image/x-icon" href="assets/images/favicon.png" />
     <link id="app-theme" rel="stylesheet" type="text/css" href="mira.css" />
+    <script src="https://www.paypal.com/sdk/js?currency=SGD&client-id=AdUY4ff-z1Y4D1Hnmuaunig_v_UJJjYCup9GLSW4H2bY-On0U34vAdh01H3R9ehvrQZh7lYHWKLpmLCm"></script>
   </head>
   <body>
     <app-root class="app-root"></app-root>
